# scale-info-legacy

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: rust.yml
src/: chain_types.rs  insert_name.rs  lib.rs  lookup_name.rs  test_utils.rs  ty.rs  ty_desc.rs  ty_name.rs  type_desc.rs  type_description.rs  type_name.rs  type_registry.rs  type_registry_set.rs  type_shape.rs
